some parts on admin are broken, but this commit done before menu refactor

--- a/catalog/view/theme/d_visualize/template/component/breadcrumb/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/breadcrumb/default.twig
@@ -1,20 +1,23 @@
-<!-- > breadcrumb -->
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <ul class="breadcrumb vz-breadcrumb vz-breadcrumb_default">
-                {% set count = 0 %}
-                {% for breadcrumb in breadcrumbs %}
-                    {% set count = count + 1 %}
+{% if setting.display.value %}
+    <!-- > breadcrumb -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <ul class="breadcrumb vz-breadcrumb vz-breadcrumb_default">
+                    {% set count = 0 %}
+                    {% for breadcrumb in breadcrumbs %}
+                        {% set count = count + 1 %}
 
-                    {% if count == breadcrumbs|length %}
-                        <li class="vz-breadcrumb_item vz-breadcrumb_item_last">{{ breadcrumb.text }}</li>
-                    {% else %}
-                        <li class="vz-breadcrumb_item"><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
-                    {% endif %}
-                {% endfor %}
-            </ul>
+                        {% if count == breadcrumbs|length %}
+                            <li class="vz-breadcrumb_item vz-breadcrumb_item_last">{{ breadcrumb.text }}</li>
+                        {% else %}
+                            <li class="vz-breadcrumb_item"><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a>
+                            </li>
+                        {% endif %}
+                    {% endfor %}
+                </ul>
+            </div>
         </div>
     </div>
-</div>
-<!-- /> breadcrumb -->
+    <!-- /> breadcrumb -->
+{% endif %}
