--- a/admin/view/stylesheet/d_visualize/components/edit/_menu.scss
+++ b/admin/view/stylesheet/d_visualize/components/edit/_menu.scss
@@ -7,26 +7,10 @@
     flex-direction: column;
     height: 100%;
     max-width: 300px;
-    .menu-hidden & {
-      > *:not(.vz-edit-menu-heading) {
-        display: none;
-      }
-      .vz-edit-menu-heading {
-        padding: 0px 0;
-        .menu_heading_publish {
-          display: none;
-        }
-        &_close{
-          position: relative;
-        }
-      }
-      &.vz-edit-menu {
-      }
-    }
-    &-heading {
+    &__heading {
       position: relative;
       display: flex;
-      flex-direction: row-reverse;
+      justify-content: space-between;
       padding: 10px 0;
       margin-bottom: 20px;
       &_close {
@@ -44,97 +28,35 @@
       }
 
     }
-    &-change_theme {
-      display: flex;
-      align-items: center;
-      margin-bottom: 20px;
-    }
-    &-notification_help {
-      margin-bottom: 20px;
-      &_template {
-        padding: 3px;
-        border: 1px solid gray;
+    .menu-hidden & {
+      > *:not(.vz-edit-menu__heading) {
+        display: none;
+      }
+      .vz-edit-menu__heading {
+        padding: 0px 0;
+        .menu_heading_publish {
+          display: none;
+        }
+        &_close {
+          position: relative;
+        }
+      }
+      &.vz-edit-menu {
       }
     }
-  }
-  &.menu-hidden {
-    width: 0;
+    .edit-component & {
+      &__change-theme {
+        display: none;
+      }
+      .vz-edit-navigation {
+        opacity: 0;
+        height: 0;
+      }
+
+    }
+
   }
 }
 
-.vz-edit
-{
-  &-theme-menu-wrap {
-    position: relative;
-  }
-  &-navigation__nav {
-    flex: 0 1 100%;
-    .nav {
-      margin-left: -5px;
-      margin-right: -5px;
-      padding-top: 10px;
-      padding-bottom: 10px;
-      &_item {
-        border: 1px solid gray;
-        border-bottom: 0;
-        padding: 10px 15px;
-        position: relative;
-        &:after {
-          position: absolute;
-          right: 5px;
-          font-family: "Font Awesome\ 5 Free";
-          font-weight: 600;
-          content: "\f054";
-        }
-        &:hover {
-          cursor: pointer;
-        }
-        &:last-child {
-          border-bottom: 1px solid gray;
-        }
-      }
-      ~ .content_nav {
-        overflow-y: scroll;
-        max-height: 500px;
-      }
-    }
-  }
-  &-controls {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    align-items: center;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    .hider {
-      color: white;
-      background: gray;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 15px;
-      border-radius: 100%;
-      width: 25px;
-      height: 25px;
-      margin-left: 20px;
-
-    }
-  }
-  &-responsive_toggle {
-    flex: 1;
-    display: inline-flex;
-    font-size: 20px;
-    align-items: center;
-    justify-content: flex-end;
-    > * {
-      padding-right: 5px;
-      padding-left: 5px;
-      margin-right: 5px;
-    }
-    .menu-hidden & ,.edit_vd &{
-      display: none;
-    }
-  }
+.vz-edit-back {
 }
