context components addeds, add components settings, need to implement saving to session context of history

--- a/admin/view/stylesheet/d_visualize/components/edit/_component.scss
+++ b/admin/view/stylesheet/d_visualize/components/edit/_component.scss
@@ -1,6 +1,5 @@
-.vz-edit-navigation{
- &__nav{
-   max-height: 400px;
-   overflow-Y: scroll ;
- }
+.edit-component{
+  .vz-edit-page-select{
+    display: none;
+  }
 }
