--- a/admin/view/stylesheet/d_visualize/components/edit/_menu.scss
+++ b/admin/view/stylesheet/d_visualize/components/edit/_menu.scss
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    max-width: 300px;
+    width: 300px;
     &__heading {
       position: relative;
       display: flex;
@@ -28,12 +28,18 @@
       }
 
     }
+    /* set styles when menu have small size*/
     .menu-hidden & {
-      > *:not(.vz-edit-menu__heading) {
+      max-width: 70px;
+      > * {
         display: none;
       }
+      .vz-edit-menu__heading,
+      .vz-edit-controls {
+        display: block;
+      }
       .vz-edit-menu__heading {
-        padding: 0px 0;
+        padding: 0;
         .menu_heading_publish {
           display: none;
         }
@@ -41,9 +47,18 @@
           position: relative;
         }
       }
-      &.vz-edit-menu {
+    }
+    .edit_vd & {
+      > * {
+        display: none;
+      }
+      .vz-edit-menu__heading,
+      .vz-edit-controls,
+      .vz-edit-vdh {
+        display: block;
       }
     }
+    /* this set styles when edit component*/
     .edit-component & {
       &__change-theme {
         display: none;
@@ -51,6 +66,7 @@
       .vz-edit-navigation {
         opacity: 0;
         height: 0;
+        overflow: hidden;
       }
 
     }
