--- a/admin/view/stylesheet/d_visualize/components/edit/_naviation.scss
+++ b/admin/view/stylesheet/d_visualize/components/edit/_naviation.scss
@@ -1,5 +1,7 @@
 .vz-edit {
   &-navigation__nav {
+    max-height: 400px;
+    overflow-Y: scroll ;
     flex: 0 1 100%;
     .nav {
       margin-left: -5px;
