add prerender screenshots and add some good lokin preview work at actions on home page; at this moment work pretty well changing components their settings are not work property

--- a/admin/view/stylesheet/d_visualize/d_visualize.pcss
+++ b/admin/view/stylesheet/d_visualize/d_visualize.pcss
@@ -5,4 +5,5 @@
 }
 @import "component/_import.scss";
 @import "components/_import.scss";
+@import "elements/_import.scss";
 @import "page/_import.scss";
