fix boots error by cdn - temporary - very hard to solve; add page opencart with styles ;

--- a/admin/view/javascript/d_visualize/nuxt_vurify/assets/style/app.styl
+++ b/admin/view/javascript/d_visualize/nuxt_vurify/assets/style/app.styl
@@ -1,2 +1,7 @@
 // Import Vuetify styling
 @require '~vuetify/src/stylus/main.styl'
+
+#column-left{
+    position:relative !important;
+    padding-top:0;
+}
