dev working are great! home rewrite need some design on home.

--- a/admin/view/javascript/d_visualize/nuxt_vurify/assets/sass/_opencart.scss
+++ b/admin/view/javascript/d_visualize/nuxt_vurify/assets/sass/_opencart.scss
@@ -1,4 +1,7 @@
 .opencart {
+  .v-toolbar__content, .v-toolbar__extension{
+    padding: 0;
+  }
   &-header,&-footer {
     width: 100%;
   }
@@ -6,7 +9,12 @@
     height: 100%;
     #column-left {
       margin: 0;
+      left: 0 !important;
+      padding-top: 0;
       width: initial;
     }
+  }
+  #container{
+    overflow: visible;
   }
 }
