--- a/admin/view/javascript/d_visualize/nuxt_vurify/assets/sass/app.scss
+++ b/admin/view/javascript/d_visualize/nuxt_vurify/assets/sass/app.scss
@@ -3,5 +3,7 @@
 @import 'elements/card';
 @import 'elements/navbar';
 @import 'elements/buttons';
+@import 'elements/img';
 @import 'elements/transitions';
 @import "opencart";
+@import "component/import";
