--- a/admin/view/javascript/d_visualize/nuxt_vurify/assets/style/app.styl
+++ b/admin/view/javascript/d_visualize/nuxt_vurify/assets/style/app.styl
@@ -1,7 +1,18 @@
 // Import Vuetify styling
-@require '~vuetify/src/stylus/main.styl'
 
-#column-left{
-    position:relative !important;
-    padding-top:0;
+$body-font-family := 'Open Sans', sans-serif
+
+$headings := {
+  h1: { size: 30px, weight: 300, line-height: 1, letter-spacing: -.04em, font-family: $heading-font-family },
+  h2: { size: 28px, weight: 400, line-height: 1, letter-spacing: -.02em, font-family: $heading-font-family },
+  h3: { size: 22px, weight: 400, line-height: 1, letter-spacing: normal, font-family: $heading-font-family },
+  h4: { size: 18px, weight: 400, line-height: 1, letter-spacing: normal, font-family: $heading-font-family },
+  h5: { size: 16px, weight: 400, line-height: 1, letter-spacing: normal, font-family: $heading-font-family },
+  h6: { size: 15px, weight: 500, line-height: 1, letter-spacing: .02em, font-family: $heading-font-family },
+  subheading: { size: 16px, weight: 400 },
+  body-2: { size: 14px, weight: 500 },
+  body-1: { size: 14px, weight: 400 },
+  caption: { size: 12px, weight: 400 },
+  button: { size: 14px, weight: 500 }
 }
+@require '~vuetify/src/stylus/main.styl'
