--- a/admin/view/javascript/d_visualize/nuxt_vurify/assets/sass/app.scss
+++ b/admin/view/javascript/d_visualize/nuxt_vurify/assets/sass/app.scss
@@ -5,6 +5,7 @@
 @import 'elements/buttons';
 @import 'elements/img';
 @import 'elements/transitions';
-@import "opencart";
 @import "util/import";
+@import "page/editor";
 @import "component/import";
+@import "opencart";
