--- a/catalog/view/theme/d_visualize/template/common/footer.twig
+++ b/catalog/view/theme/d_visualize/template/common/footer.twig
@@ -1,4 +1,20 @@
 {% for script in scripts %}
     <script src="{{ script }}" type="text/javascript"></script>
 {% endfor %}
+<script>
+	window.addEventListener('message', function(event) {
+		// IMPORTANT: Check the origin of the data! 
+        console.log(event)
+		if (~event.origin.indexOf('http://yoursite.com')) {
+			// The data has been sent from your site 
+
+			// The data sent with postMessage is stored in event.data 
+			console.log(event.data);
+		} else {
+			// The data hasn't been sent from your site! 
+			// Be careful! Do not use it. 
+			return;
+		}
+	});
+</script>
 </body></html>
