--- a/admin/view/javascript/d_visualize/nuxt_vurify/assets/sass/app.scss
+++ b/admin/view/javascript/d_visualize/nuxt_vurify/assets/sass/app.scss
@@ -1,10 +1,6 @@
 @import 'variables';
 
-@import 'elements/card';
-@import 'elements/navbar';
-@import 'elements/buttons';
-@import 'elements/img';
-@import 'elements/transitions';
+@import 'elements/import';
 @import "util/import";
 @import "page/editor";
 @import "component/import";
