editor change page work on one direction

--- a/admin/view/javascript/d_visualize/nuxt_vurify/assets/sass/elements/import.scss
+++ b/admin/view/javascript/d_visualize/nuxt_vurify/assets/sass/elements/import.scss
@@ -1,7 +1,15 @@
+/*inputs*/
 .v-input{
   font-size: 15px;
 }
+
+/*images*/
 img{
   max-width: 100%;
   height: auto;
 }
+
+#__nuxt {
+  @import "btn";
+}
+
