--- a/catalog/view/theme/d_visualize/template/common/footer.twig
+++ b/catalog/view/theme/d_visualize/template/common/footer.twig
@@ -1,19 +1,18 @@
 {% for script in scripts %}
     <script src="{{ script }}" type="text/javascript"></script>
 {% endfor %}
+{# only for devs #}
 <script>
 	window.addEventListener('message', function(event) {
-		// IMPORTANT: Check the origin of the data! 
-        console.log(event)
-		if (~event.origin.indexOf('http://yoursite.com')) {
-			// The data has been sent from your site 
-
-			// The data sent with postMessage is stored in event.data 
-			console.log(event.data);
-		} else {
-			// The data hasn't been sent from your site! 
-			// Be careful! Do not use it. 
-			return;
+		if (event.data.vz_token){
+			var route = $('#content').data('route');
+			var location = this.location.href;
+			// IMPORTANT: Check the origin of the data!
+			if (~event.origin.indexOf('http://localhost:3000')) {
+				parent.postMessage({vz_ifame_data: {route: route, location: location}}, "*");
+			} else {
+				return;
+			}
 		}
 	});
 </script>
