--- a/admin/view/javascript/d_visualize/nuxt_vurify/assets/sass/page/_iframe.scss
+++ b/admin/view/javascript/d_visualize/nuxt_vurify/assets/sass/page/_iframe.scss
@@ -3,4 +3,8 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  @media screen and(max-width: 768px){
+    padding-left: 20px;
+    width: calc(100%);
+  }
 }
