--- a/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/base/helper/_import.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/base/helper/_import.scss
@@ -1,3 +1,8 @@
 @import "mixins";
 @import "functions";
-@import "sprite";
+/*TEST*/
+.test{
+  @import "test_mixins";
+@import "test_functions";
+}
+/*TEST*/
