--- a/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/base/_import.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/base/_import.scss
@@ -1,5 +1,4 @@
-@import "../config";
-@import "map";
-@import "colors";
-// ? wats for this normalize?
-//@import "normalize";
+@import "variables/import";
+@import "typography";
+@import "common";
+@import "helper/import";
