--- a/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/base/helper/_mixins.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/base/helper/_mixins.scss
@@ -1,55 +1,3 @@
-@import "../../config";
-
-@mixin prefixes($property, $value) {
-  -webkit-#{$property}: #{$value};
-  -khtml-#{$property}: #{$value};
-  -moz-#{$property}: #{$value};
-  -ms-#{$property}: #{$value};
-  -o-#{$property}: #{$value};
-  #{$property}: #{$value};
-}
-
-@mixin placeholder {
-  &::-webkit-input-placeholder {
-    @content
-  }
-  &:-moz-placeholder {
-    @content
-  }
-  &::-moz-placeholder {
-    @content
-  }
-  &:-ms-input-placeholder {
-    @content
-  }
-}
-
-@mixin flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-}
-
-@mixin inline-flex {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: -webkit-inline-flex;
-  display: inline-flex;
-}
-
-@mixin transition($for: all, $value: .4s, $animate: ease) {
-  @include prefixes("transition", $for $value $animate)
-}
-
-@mixin border-radius($radius: $borderRadiusBase) {
-  @include prefixes("border-radius", $radius)
-}
-
-@mixin box-shadow($value: 0 0 5px #ccc) {
-  @include prefixes("box-shadow", $value)
-}
-
 @mixin clearfix {
   &:before,
   &:after {
@@ -60,7 +8,6 @@
     clear: both;
   }
 }
-
 @mixin arrow($direction, $size, $color) {
   @if $direction == up {
     border-left: $size solid transparent;
@@ -80,20 +27,17 @@
     border-right: $size solid $color;
   }
 }
-
 @mixin push-auto {
   margin: {
     left: auto;
     right: auto;
   }
 }
-
 @mixin pseudo($display: block, $pos: absolute, $content: '') {
   content: $content;
   display: $display;
   position: $pos;
 }
-
 @mixin triangle($color, $direction, $size: 6px, $position: absolute, $round: false) {
   @include pseudo($pos: $position);
   width: 0;
@@ -123,19 +67,6 @@
     margin-left: -$size;
   }
 }
-
-@mixin mq($width, $type: max) {
-  @if map_has_key($breakpoints, $width) {
-    $width: map_get($breakpoints, $width);
-    @if $type == max {
-      $width: $width - 1px;
-    }
-    @media only screen and (#{$type}-width: $width) {
-      @content;
-    }
-  }
-}
-
 @mixin retina($image, $width, $height) {
   @media (min--moz-device-pixel-ratio: 1.3),
   (-o-min-device-pixel-ratio: 2.6/2),
@@ -147,7 +78,6 @@
     background-size: $width $height;
   }
 }
-
 @mixin font-face($font-name, $file-name, $weight: normal, $style: normal) {
   @font-face {
     font-family: quote($font-name);
@@ -160,43 +90,54 @@
     font-style: $style;
   }
 }
-
-@mixin absolute-center {
+@mixin center-transform {
   position: absolute;
   top: 50%;
   left: 50%;
-  @include prefixes("transform", translate(-50%, -50%))
+  transform: translate(-50%, -50%);
 }
-
-@mixin vcenter() {
+@mixin center-y-transform {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
 }
-
-@mixin center($top, $left) {
+@mixin center-margin($top, $left) {
   position: absolute;
   margin-top: - $top / 2;
   margin-left: - $left / 2;
   top: 50%;
   left: 50%;
 }
-
-@mixin reset-brds-left($value: 4px) {
-  @include border-radius(0 $value $value 0);
-}
-
-@mixin reset-brds-right($value: 4px) {
-  @include border-radius($value 0 0 $value);
-}
-
 @mixin truncate($truncation-boundary) {
   max-width: $truncation-boundary;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
+@mixin flex-align-center {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+}
+@mixin full-space{
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+@mixin mq($width, $type: max) {
+  @if map_has_key($breakpoints, $width) {
+    $width: map_get($breakpoints, $width);
+    @if $type == max {
+      $width: $width - 1px;
+    }
+    @media only screen and (#{$type}-width: $width) {
+      @content;
+    }
+  }
+}
 @mixin adaptive($el, $type : 'max') {
   .#{$el} {
     @content;
@@ -217,28 +158,5 @@
     }
   }
 }
-@mixin align-middle {
-  @include flex;
-  align-items: center;
-  flex-grow: 1;
-}
-@mixin full-space{
-  content: "";
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-}
-@mixin vd($el) {
-  @each $class in $el{
-    //.vd-#{$class},
-    [data-is='vd-block-#{$class}']{
-      @content;
-    }
-  }
-}
-.modal-open{
-  overflow: hidden !important;
-}
+
 // todo sprite
