colrs variables gooes into php

--- a/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/base/variables/_grid.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/base/variables/_grid.scss
@@ -8,4 +8,5 @@ $breakpoints: (
         "tablet-wide": 991px,
         "laptop": 1199px,
         "desktop": 1248px,
-        "desktop-wide": 1440px)
+        "desktop-wide": 1440px);
+$container-width: 980px;
