--- a/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/base/variables/_colors.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/base/variables/_colors.scss
@@ -1,7 +1,5 @@
+$color-text-primary: white !default;
 $color-primary: #229ac8 !default;
-$color-default: #dddddd !default;
-$color-danger: #bd362f !default;
-$color-warning: #dc512c !default;
-
-$color-body-bgc: white !default;
-$color-body: white !default;
+$color-text-body: #666 !default;
+$color-heading: #444 !default;
+$color-link: #23a1d1 !default;
