--- a/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/base/variables/_font.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/base/variables/_font.scss
@@ -1,1 +1,7 @@
-$font-size-base:14px;
+$body-base-size: 14px !default;
+$body-font: 'Open Sans' !default;
+
+$headings-font: 'Montserrat' !default;
+$headings-base-size: 14px !default;
+$headings-letter-spacing: 14px !default;
+$headings-capitalize: false !default;
