add styles for pages

--- a/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/base/helper/_import.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/base/helper/_import.scss
@@ -1,8 +1,8 @@
 @import "mixins";
 @import "functions";
 /*TEST*/
-.test{
-  @import "test_mixins";
-@import "test_functions";
-}
+//.test{
+//  @import "test_mixins";
+//@import "test_functions";
+//}
 /*TEST*/
