--- a/admin/view/stylesheet/d_visualize/component/_animation.scss
+++ b/admin/view/stylesheet/d_visualize/component/_animation.scss
@@ -6,7 +6,7 @@
 .slide-fade-leave-active {
 }
 .slide-fade-enter, .slide-fade-leave-to
-  /* .slide-fade-leave-active до версии 2.1.8 */ {
+  /* .slide-fade-leave-active_tab до версии 2.1.8 */ {
   transform: translateX(10px);
   opacity: 0;
 }
@@ -26,6 +26,6 @@
 .list-leave-to{
   opacity: 0;
 }
-.list-enter /* .list-leave-active до версии 2.1.8 */ {
+.list-enter /* .list-leave-active_tab до версии 2.1.8 */ {
   opacity: 0;
 }
