--- a/catalog/view/theme/d_visualize/stylesheet/core_old/lib/bootstrap3/stylesheets/bootstrap/_input-groups.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/core_old/lib/bootstrap3/stylesheets/bootstrap/_input-groups.scss
@@ -146,7 +146,7 @@
     + .btn {
       margin-left: -1px;
     }
-    // Bring the "active" button to the front
+    // Bring the "active_tab" button to the front
     &:hover,
     &:focus,
     &:active {
