--- a/catalog/view/theme/d_visualize/stylesheet/core_old/lib/bootstrap3/stylesheets/bootstrap/_navs.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/core_old/lib/bootstrap3/stylesheets/bootstrap/_navs.scss
@@ -219,7 +219,7 @@
 // Tabbable tabs
 // -------------------------
 
-// Hide tabbable panes to start, show them when `.active`
+// Hide tabbable panes to start, show them when `.active_tab`
 .tab-content {
   > .tab-pane {
     display: none;
