--- a/catalog/view/theme/d_visualize/stylesheet/core_old/lib/bootstrap3/stylesheets/bootstrap/_normalize.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/core_old/lib/bootstrap3/stylesheets/bootstrap/_normalize.scss
@@ -83,7 +83,7 @@ template {
 // ==========================================================================
 
 //
-// Remove the gray background color from active links in IE 10.
+// Remove the gray background color from active_tab links in IE 10.
 //
 
 a {
@@ -92,7 +92,7 @@ a {
 
 //
 // Improve readability of focused elements when they are also in an
-// active/hover state.
+// active_tab/hover state.
 //
 
 a:active,
