--- a/catalog/view/theme/d_visualize/stylesheet/core_old/lib/bootstrap3/stylesheets/bootstrap/_thumbnails.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/core_old/lib/bootstrap3/stylesheets/bootstrap/_thumbnails.scss
@@ -21,7 +21,7 @@
     margin-right: auto;
   }
 
-  // [converter] extracted a&:hover, a&:focus, a&.active to a.thumbnail:hover, a.thumbnail:focus, a.thumbnail.active
+  // [converter] extracted a&:hover, a&:focus, a&.active_tab to a.thumbnail:hover, a.thumbnail:focus, a.thumbnail.active_tab
 
   // Image captions
   .caption {
