--- a/catalog/view/theme/d_visualize/stylesheet/core_old/lib/bootstrap3/stylesheets/bootstrap/_list-group.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/core_old/lib/bootstrap3/stylesheets/bootstrap/_list-group.scss
@@ -41,7 +41,7 @@
 // Interactive list items
 //
 // Use anchor or button elements instead of `li`s or `div`s to create interactive items.
-// Includes an extra `.active` modifier class for showing selected items.
+// Includes an extra `.active_tab` modifier class for showing selected items.
 
 a.list-group-item,
 button.list-group-item {
@@ -87,7 +87,7 @@ button.list-group-item {
   &.active,
   &.active:hover,
   &.active:focus {
-    z-index: 2; // Place active items above their siblings for proper border styling
+    z-index: 2; // Place active_tab items above their siblings for proper border styling
     color: $list-group-active-color;
     background-color: $list-group-active-bg;
     border-color: $list-group-active-border;
