--- a/catalog/view/theme/d_visualize/stylesheet/core_old/lib/bootstrap3/stylesheets/bootstrap/_variables.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/core_old/lib/bootstrap3/stylesheets/bootstrap/_variables.scss
@@ -111,9 +111,9 @@ $border-radius-base:        4px !default;
 $border-radius-large:       6px !default;
 $border-radius-small:       3px !default;
 
-//** Global color for active items (e.g., navs or dropdowns).
+//** Global color for active_tab items (e.g., navs or dropdowns).
 $component-active-color:    #fff !default;
-//** Global background color for active items (e.g., navs or dropdowns).
+//** Global background color for active_tab items (e.g., navs or dropdowns).
 $component-active-bg:       $brand-primary !default;
 
 //** Width of the `border` for generating carets that indicate dropdowns.
@@ -682,13 +682,13 @@ $list-group-border-radius:      $border-radius-base !default;
 
 //** Background color of single list items on hover
 $list-group-hover-bg:           #f5f5f5 !default;
-//** Text color of active list items
+//** Text color of active_tab list items
 $list-group-active-color:       $component-active-color !default;
-//** Background color of active list items
+//** Background color of active_tab list items
 $list-group-active-bg:          $component-active-bg !default;
-//** Border color of active list elements
+//** Border color of active_tab list elements
 $list-group-active-border:      $list-group-active-bg !default;
-//** Text color for content within active list items
+//** Text color for content within active_tab list items
 $list-group-active-text-color:  lighten($list-group-active-bg, 40%) !default;
 
 //** Text color of disabled list items
@@ -778,9 +778,9 @@ $badge-color:                 #fff !default;
 $badge-link-hover-color:      #fff !default;
 $badge-bg:                    $gray-light !default;
 
-//** Badge text color in active nav link
+//** Badge text color in active_tab nav link
 $badge-active-color:          $link-color !default;
-//** Badge background color in active nav link
+//** Badge background color in active_tab nav link
 $badge-active-bg:             #fff !default;
 
 $badge-font-weight:           bold !default;
