--- a/catalog/view/theme/d_visualize/stylesheet/core_old/lib/bootstrap3/stylesheets/bootstrap/mixins/_buttons.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/core_old/lib/bootstrap3/stylesheets/bootstrap/mixins/_buttons.scss
@@ -1,6 +1,6 @@
 // Button variants
 //
-// Easily pump out default styles, as well as :hover, :focus, :active,
+// Easily pump out default styles, as well as :hover, :focus, :active_tab,
 // and disabled options for all buttons
 
 @mixin button-variant($color, $background, $border) {
