--- a/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/opencart.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/opencart.scss
@@ -405,13 +405,13 @@ footer h5 {
 .buttons {
   margin: 1em 0;
 }
+
 .btn {
   padding: 7.5px 12px;
   font-size: 12px;
   border: 1px solid #cccccc;
   border-radius: 4px;
   outline: none !important;
-  box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
 }
 .btn-xs {
   font-size: 9px;
@@ -774,4 +774,15 @@ h2.price {
 .btn-info:hover, .btn-info:active, .btn-info.active, .btn-info.disabled, .btn-info[disabled] {
   background-image: none;
   background-color: #df5c39;
+}
+
+/*Fix new font awesome*/
+.swiper-button-next, .swiper-button-prev {
+  &:before {
+    font-family: "Font Awesome\ 5 Free";
+    font-weight: 600;
+  }
+}
+.swiper-button-prev:before {
+  content: "\f053";
 }
