--- a/admin/view/javascript/d_visualize/nuxt_vurify/assets/sass/app.scss
+++ b/admin/view/javascript/d_visualize/nuxt_vurify/assets/sass/app.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 
 @import 'elements/import';
+@import 'modification/import';
 @import "util/import";
 @import "page/editor";
 @import "component/import";
