ready to reliz 2

--- a/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/opencart.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/opencart.scss
@@ -55,7 +55,7 @@ h1, h2, h3, h4, h5, h6 {
 }
     /* default font size */
 .fa {
-  font-size: $color-text-body;
+  font-size: $font-size-base;
 }
 /* Override the bootstrap defaults */
 h1 {
