ready to reliz 2

--- a/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/_config.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/_config.scss
@@ -11,7 +11,7 @@ $button-box-shadow: true;
 $font-size-base: 14px;
 $font-family: Open Sans;
 $font-line-height: 1.3;
-$font-headings-family: Montserrat;
+$font-headings-family: Open Sans;
 $font-headings-size-base: 14px;
 $font-headings-line-height: 1.1;
 $font-headings-letter-spacing: 1px;
