--- a/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/opencart.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/opencart.scss
@@ -1,13 +1,12 @@
 @import "base/import";
 @import "config";
-
 @include google-font {
   @include google-font($font-family);
   @include google-font($font-headings-family);
 }
 
 /**/
-body {
+body, html {
   font-family: '' + $font-family+ '', sans-serif;
   font-weight: 400;
   color: $color-text-body;
@@ -88,18 +87,23 @@ legend {
   padding: 7px 0px
 }
 label {
-  font-size: 12px;
+  font-size: $font-size-base*.9;
   font-weight: normal;
 }
 select.form-control, textarea.form-control, input[type="text"].form-control, input[type="password"].form-control, input[type="datetime"].form-control, input[type="datetime-local"].form-control, input[type="date"].form-control, input[type="month"].form-control, input[type="time"].form-control, input[type="week"].form-control, input[type="number"].form-control, input[type="email"].form-control, input[type="url"].form-control, input[type="search"].form-control, input[type="tel"].form-control, input[type="color"].form-control {
-  font-size: 12px;
+  font-size: $font-size-base*.9;
 }
 .input-group input, .input-group select, .input-group .dropdown-menu, .input-group .popover {
-  font-size: 12px;
+  font-size: $font-size-base*.9;
 }
 .input-group .input-group-addon {
-  font-size: 12px;
+  font-size: $font-size-base*.9;
   height: 30px;
+}
+
+.input-group-btn .btn {
+  font-size: $font-size-base*.9;
+
 }
 /* Fix some bootstrap issues */
 span.hidden-xs, span.hidden-sm, span.hidden-md, span.hidden-lg {
@@ -107,7 +111,7 @@ span.hidden-xs, span.hidden-sm, span.hidden-md, span.hidden-lg {
 }
 
 .nav-tabs {
-  margin-bottom: 15px;
+  margin-bottom: rem(15);
 }
 div.required .control-label:before {
   content: '* ';
@@ -184,7 +188,7 @@ div.required .control-label:before {
   padding: 0 10px;
 }
 #search .btn-lg {
-  font-size: 15px;
+  font-size: $font-size-base*1.1;
   line-height: 18px;
   padding: 10px 35px;
   text-shadow: 0 1px 0 #FFF;
@@ -194,7 +198,7 @@ div.required .control-label:before {
   margin-bottom: 10px;
 }
 #cart > .btn {
-  font-size: 12px;
+  font-size: $font-size-base*.8;
   line-height: 18px;
   color: #FFF;
 }
@@ -718,10 +722,8 @@ h2.price {
   margin: 0;
 }
 .thumbnails > li {
-  margin-left: 20px;
 }
 .thumbnails {
-  margin-left: -20px;
 }
 .thumbnails > img {
   width: 100%;
