--- a/catalog/view/theme/d_visualize/template/component/d_product_thumb/opencart.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_product_thumb/opencart.twig
@@ -1,10 +1,10 @@
-<div class="vz-product-thumb product-thumb vz-product-thumb_opencart transition">
+<div class="vz-product-thumb product-thumb vz-product-thumb--opencart transition">
         <div class="vz-product-thumb__image"><a href="{{ product.href }}"><img src="{{ product.thumb }}"
                                                                                alt="{{ product.name }}"
                                                                                title="{{ product.name }}"
                                                                                class="img-responsive"/></a></div>
         <div class="vz-product-thumb__caption">
-            <h4 class="heading-h4"><a href="{{ product.href }}">{{ product.name }}</a></h4>
+            <p class="heading-h4"><a href="{{ product.href }}">{{ product.name }}</a></p>
             <p>{{ product.description }}</p>
             {% if product.rating %}
                 {% include component.rating.template with rating.button|merge({
